--- a/Tenant Onboarding Solution/Src/Screen3.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Screen3.fx.yaml
@@ -54,11 +54,23 @@ Screen3 As screen:
         BorderColor: =App.Theme.Colors.Darker40
         DelayItemLoading: =true
         Items: |-
-            =Filter(
+            =With(
+                {    
+                    daysInMonth: Day(DateAdd(DateValue(Dropdown1.Selected.Value & " 1, " & Dropdown2.Selected.Value), 1, TimeUnit.Months))
+                },
+                ForAll(
+                    Sequence(daysInMonth),
+                    {
+                        Day: Text(DateAdd(DateValue(Dropdown1.Selected.Value & " 1, " & Dropdown2.Selected.Value), ThisRecord.Value - 1, TimeUnit.Days), "dd"),
+                        Date: DateAdd(DateValue(Dropdown1.Selected.Value & " 1, " & Dropdown2.Selected.Value), ThisRecord.Value - 1, TimeUnit.Days)
+                    }
+                )
+            )
+            /*Filter(
                 Attendance,
                 Text(Date, "mmmm") = Dropdown1.Selected.Value,
                 Year(Date) = Value(Dropdown2.Selected.Value)
-            )
+            )*/
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =If(Self.Layout = Layout.Horizontal, Min(280, Self.Width - 60), Min(280, Self.Height - 60))
@@ -83,7 +95,7 @@ Screen3 As screen:
                 Font: =App.Theme.Font
                 Size: =13
                 Text: |-
-                    =Text(ThisItem.'Clock In',"hh:mm AM/PM")
+                    =ThisItem.Date//Text(ThisItem.'Clock In',"hh:mm AM/PM")
                 X: =30
                 Y: =84
                 ZIndex: =1
@@ -95,9 +107,9 @@ Screen3 As screen:
                 Font: =App.Theme.Font
                 Size: =13
                 Text: |-
-                    =Text(ThisItem.'Clock Out',"hh:mm AM/PM")
-                X: =206
-                Y: =84
+                    =ThisItem.Day//Text(ThisItem.'Clock Out',"hh:mm AM/PM")
+                X: =12
+                Y: =12
                 ZIndex: =2
 
             Label1_2 As label:
@@ -106,8 +118,56 @@ Screen3 As screen:
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 Font: =App.Theme.Font
                 Size: =13
-                Text: =ThisItem.'Total Hours'
+                Text: =//ThisItem.'Total Hours'
                 X: =84
                 Y: =142
                 ZIndex: =3
+
+    "Gallery4 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+        BorderColor: =App.Theme.Colors.Darker40
+        DelayItemLoading: =true
+        Items: =[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19, 20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41]
+        Layout: =Layout.Vertical
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplatePadding: =0
+        TemplateSize: =104
+        X: =726
+        Y: =18
+        ZIndex: =4
+
+        Title4 As label:
+            Color: =RGBA(50, 49, 48, 1)
+            DisabledColor: =RGBA(166, 166, 166, 1)
+            Font: =App.Theme.Font
+            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: =ThisItem.Value
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth - 173
+            X: =103
+            Y: =5
+            ZIndex: =2
+
+        Separator2 As rectangle:
+            BorderColor: =App.Theme.Colors.Darker40
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =8
+            OnSelect: =Select(Parent)
+            Width: =Parent.TemplateWidth
+            Y: =Parent.TemplateHeight - Self.Height
+            ZIndex: =5
+
+        Rectangle2 As rectangle:
+            BorderColor: =App.Theme.Colors.Darker40
+            Fill: =App.Theme.Colors.Darker30
+            Height: =Parent.TemplateHeight - Separator2.Height
+            OnSelect: =Select(Parent)
+            Visible: =ThisItem.IsSelected
+            Width: =4
+            ZIndex: =6
 
